fix: scrollbar width & colors

--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -19,6 +19,11 @@ html {
   position: relative;
 }
 
+body {
+  overflow-x: hidden;
+  overflow-y: visible;
+}
+
 main {
   position: relative;
   width: 100%;
@@ -28,8 +33,7 @@ main {
   padding: 2rem 1rem 0 1rem;
   display: grid;
   grid-template-rows: 1fr auto;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   transition: background-color 0.5s linear;
 
   & > div {
@@ -54,7 +58,7 @@ main {
 
 // Chrome scrollbars
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 4px;
 }
 
 ::-webkit-scrollbar-track {
@@ -62,13 +66,13 @@ main {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #9993;
+  background-color: #aaa9;
   border-radius: 6px;
 
   &:hover {
-    background-color: #9999;
+    background-color: #999;
   }
   &:active {
-    background-color: #777;
+    background-color: #bbb;
   }
 }
